# api-system

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/src/: auth.rs  config.rs  db.rs  lib.rs  main.rs  types.rs
backend/src/db/: auth.rs  infrastructure.rs  metrics.rs  mod.rs  products.rs  rules.rs  seeds.rs  system.rs
backend/src/engine/: crypto.rs  diff.rs  email.rs  expression.rs  gray_release.rs  metrics.rs  mod.rs  notify.rs  openapi.rs  retention.rs  risk.rs  transform.rs  validation.rs
backend/src/handlers/: all_remaining.rs  api_keys.rs  approvals.rs  audit.rs  auth_user.rs  circuit_breakers.rs  classifications.rs  common.rs  llm.rs  metrics.rs  mod.rs  notifications.rs  openapi.rs  permission_templates.rs  plugins.rs  products.rs  protocols.rs  rate_limits.rs  rules.rs  subscriptions.rs  system.rs  totp.rs  transform_handlers.rs  user_management.rs  user_preferences.rs  user_sessions.rs  validation_handlers.rs  versions.rs
backend/src/types/: api_key.rs  approval.rs  llm.rs  metrics.rs  mod.rs  notification.rs  permission_template.rs  rate_limit.rs  rule.rs  system.rs  user.rs  validation.rs
deploy/k8s/: base.yaml  kustomization.yaml
docs/: USER_MANUAL.md  failover-drill.md  k8s-migration.md  roadmap.md  slo-and-loadtest.md
examples/: demo.html
frontend/: .dockerignore  .env.local.example  Dockerfile  package-lock.json  package.json
frontend/app/: ApiBuilder.tsx  (+6 more)
scripts/: check-slo.ps1  k8s-rollout.ps1
(+98 files in other folders)
