[package]
name = "api-control-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "9.3"
redis = { version = "0.28", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "chrono", "json"] }
thiserror = "2.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
sha2 = "0.10"
bcrypt = "0.15"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
rand = "0.8"
jsonschema = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
qrcode-generator = "4"
lettre = { version = "0.11", default-features = false, features = ["builder", "rustls-tls", "smtp-transport"] }
